--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,3 +1,20 @@
+@article{Bizid2018,
+	abstract = {During crisis events such as disasters, the need for real-time information retrieval (IR) from microblogs becomes essential. However, the huge amount and the variety of the shared information in real time during such events over-complicates this task. Unlike existing IR approaches based on content analysis, we propose to tackle this problem by using user-centric IR approaches with identifying and tracking prominent microblog users who are susceptible to share relevant and exclusive information at an early stage of each analyzed event phase. This approach ensures real-time access to the valuable microblogs information required by the emergency teams. In this approach, we propose a phase-aware probabilistic model for predicting and ranking prominent microblog users over time according to their behavior using Mixture of Gaussians Hidden Markov Models (MoG-HMM). The model utilizes a new user representation which takes into account both the user and the event specificities over time. This user representation comprises the following new aspects (1) Modeling microblog users behavior evolution by considering the different event phases (2) Characterizing users activity over time through a temporal sequence representation (3) Time-series-based selection of the most discriminative features (4) prominent users prediction using probabilistic phase-aware models learned a priori. We have conducted experiments during flooding events: we trained our identification models using a dataset relative to the “Alpes-Maritimes floods” and we tested its identification performance using a new dataset relative to another flooding disaster “Herault floods”. The achieved results show that our model significantly outperforms phase-unaware models and identifies most of the prominent users at an early stage of each event phase.},
+	author = {Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Doucet, Antoine},
+	doi = {10.1016/J.IS.2017.12.004},
+	file = {:Users/npm65/Documents/myGRID/refs/1-s2.0-S0306437917302260-main.pdf:pdf},
+	issn = {0306-4379},
+	journal = {Information Systems},
+	month = {nov},
+	pages = {173--188},
+	publisher = {Pergamon},
+	title = {{Detecting prominent microblog users over crisis events phases}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0306437917302260?via{\%}3Dihub},
+	volume = {78},
+	year = {2018}
+}
+
+
 @inproceedings{Pal2011,
 	abstract = {Content in microblogging systems such as Twitter is produced by tens to hundreds of millions of users. This diversity is a notable strength, but also presents the challenge of finding the most interesting and authoritative authors for any given topic. To address this, we first propose a set of features for characterizing social media authors, including both nodal and topical metrics. We then show how probabilistic clustering over this feature space, followed by a within-cluster ranking procedure, can yield a final list of top authors for a given topic. We present results across several topics, along with results from a user study confirming that our method finds authors who are significantly more interesting and authoritative than those resulting from several baseline conditions. Additionally our algorithm is computationally feasible in near real-time scenarios making it an attractive alternative for capturing the rapidly changing dynamics of microblogs.},
 	author = {Pal, Aditya and Counts, Scott},
