--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -141,7 +141,7 @@ clarify our evaluation is not based on ground truth}
 }
 
 %%%%%%%%%%%%%%%%%%%%%
-\section{Incremental User discovery}
+\section{Contexts and user metrics}
 %%%%%%%%%%%%%%%%%%%%%
 
 
@@ -178,7 +178,7 @@ $V = \{ u(p) | p \in P(C) \}$, and a weighted edge $e = \langle u_1, u_2, w \ran
 either (i) $p_2$ is a retweet of $p_1$, or (ii) $p_1$ contains a mention of $u_2$.
 For any such edge, the weight $w$ is a count of such pairs of posts occuring in $P(C)$ for the same pair of users.
 
-\subsection{User relevance metrics}
+\subsection{User relevance metrics}  \label{sec:metrics}
 
 We support a number of metrics that are generally accepted by the community as forming a core, from which many different social user roles are derived~\cite{RIQUELME2016949}. 
 We distinguish amongst three types of features, which differ in the way they are computed from the raw Twitter feed:
@@ -214,30 +214,30 @@ Using these core features, we have implemented the following metrics.
 
 For \textbf{content-based metrics}, we have:
 \begin{align}
-\textit{Topical Focus:~\cite{Missier2017}:} ~ \mathit{TF}(u) & =  \frac{\mathit{P1}_{\mathit{on}}(u)}{\mathit{P1}_{\mathit{off}}(u) +1}\\
-\textit{Topical Strength~\cite{Bizid2018}:} ~\mathit{TS}(u) & =	\frac{\mathit{P2}_{\mathit{on}}(u) \cdot \log(\mathit{P2}_{\mathit{on}}(u) + R3_{\mathit{on}} +1 )}{\mathit{P2}_{\mathit{off}}(u) \cdot \log(\mathit{P2}_{\mathit{off}}(u) + R3_{\mathit{off}} +1 ) + 1}   \\
-\textit{Topical Attachment~\cite{Bizid:2015,Poell2014}:} ~\mathit{TA}(u) & = \frac{\mathit{P1}_{\mathit{on}}(u) + \mathit{P2}_{\mathit{on}}(u)}{\mathit{P1}_{\mathit{off}}(u) + \mathit{P2}_{\mathit{off}}(u) +1} 
+\textit{Topical Focus:~\cite{Missier2017}:} ~ \mathit{TF}(u) & =  \frac{\mathit{P1}_{\mathit{on}}(u)}{\mathit{P1}_{\mathit{off}}(u) +1}    \label{eq:TF}\\
+\textit{Topical Strength~\cite{Bizid2018}:} ~\mathit{TS}(u) & =	\frac{\mathit{P2}_{\mathit{on}}(u) \cdot \log(\mathit{P2}_{\mathit{on}}(u) + R3_{\mathit{on}} +1 )}{\mathit{P2}_{\mathit{off}}(u) \cdot \log(\mathit{P2}_{\mathit{off}}(u) + R3_{\mathit{off}} +1 ) + 1}   \label{eq:TS} \\
+\textit{Topical Attachment~\cite{Bizid:2015,Poell2014}:} ~\mathit{TA}(u) & = \frac{\mathit{P1}_{\mathit{on}}(u) + \mathit{P2}_{\mathit{on}}(u)}{\mathit{P1}_{\mathit{off}}(u) + \mathit{P2}_{\mathit{off}}(u) +1} \label{eq:TA}
 \end{align}
 
 We implement one \textbf{Context-independent topological metric} and one \textbf{Context-specific topological metric}, both commonly used, see e.g.~\cite{RIQUELME2016949}:
 \begin{align}
-\textit{Follower Rank:}  \quad \mathit{FR}(u) = \frac{\mathit{F1}(u)}{\mathit{F1}(u)+\mathit{F2}(u)} \\
-\textit{In-degree centrality:} \quad \mathit{IC}(u) = \frac{\mathit{indegree}(u)}{N-1}
+\textit{Follower Rank:}  \quad \mathit{FR}(u) = \frac{\mathit{F1}(u)}{\mathit{F1}(u)+\mathit{F2}(u)}   \label{eq:FR}\\
+\textit{In-degree centrality:} \quad \mathit{IC}(u) = \frac{\mathit{indegree}(u)}{N-1}  \label{eq:IDC}
 \end{align}
 where $N$ is the number of nodes in the network induced by $C$.
 
 Note that the metrics we have selected are a superset of those indicated in recent studies on online activism, namely \cite{Lotan2011} and \cite{Poell2014}, and thus support our empirical evaluation, described in Sec.~\ref{sec:evaluation}.
 
 %%%%%%%%%%%%%%%%%%%%
-\subsection{Pipeline data flow and architecture} \label{sec:Pipeline}
+\section{Incremental User Discovery} \label{sec:Pipeline}
 %%%%%%%%%%%%%%%%%%%%
 
-The content processing pipeline operates iteratively on a set of contexts that is dynamically updated at the end of each iteration. 
-The process is therefore potentially open-ended, as long as new contexts can be discovered, as explained below.
-Let an initial user-defined context $C$ be given. 
-During one iteration, the user discovery process generates a list of users who participate in $C$, along with the complete set of their features and metrics as described above, and adds them to a user profiles database.
+The content processing pipeline operates iteratively on a set of contexts, one at the time, that is dynamically updated at the end of each iteration, starting from an initial set of seed contexts.
+The user discovery process is therefore potentially open-ended, as long as new contexts can be discovered, as explained below.
+Each iteration takes a context $C$  as input, and generates a list of users who participate in $C$, along with the complete set of their features and metrics as described above. 
+The users profiles are added to a database, where entries for repeat users are updated according to a user-defined function. 
 The final step in the iteration involves semi-automatically discovering new contexts, thus making further iterations possible.
-
+%
 The pipeline structure and data flow are illustrated in Fig. ~\ref{fig:twitterframework}.
 
 \begin{figure*}
@@ -249,127 +249,83 @@ The pipeline structure and data flow are illustrated in Fig. ~\ref{fig:twitterfr
 
 \subsection{Harvesting Content and Creating Context networks}  \label{sec:harvesting}
 
-Firstly, all\footnote{Importantly, the Twitter API only allows a small fraction of the content history to be retrieved. We discuss this limitation in Sec. \ref{sec:limitations}.}
-Twitter posts $P(C)$ that satisfy the criteria set in $C$ are retrieved, using either the Search and streaming Twitter APIs.
+Firstly, all Twitter posts $P(C)$ that satisfy the criteria set in $C$ are retrieved, using either the Search or the Streaming Twitter APIs.\footnote{Repeat queries are required to get around the well-known Twitter API limitations for retrieving tweets.}
 
-Secondly, the context $G_C$ is generated as defined in Sec.~\ref{sec:contexts}. To recall, this is a directed network representing retweet and/or mention interactions between pairs of users in $C$. 
+Secondly, the context network $G_C$ is generated as defined in Sec.~\ref{sec:contexts}. To recall, this is a directed network representing retweet and/or mention interactions between pairs of users in $C$. 
 The size of the network is largely determined by the nature of the context, and may range from a few \hl{XX} users for a small context such as a local awareness event, to \hl{XX} users for a large national event that extends over a long timeframe, such as a political election campaign.
 
 
 \subsection{Community detection}  \label{sec:communities}
 
-\anote{IN PROGRESS}
-
 Next, the context network graph $G_C$  is partitioned into communities of users.
-The goal of this partitioning is to further narrow the scope for the topology-sensitive metrics, namely FollowerRank and in-degree centrality, 
-and thus to enable weak-signal users to emerge relative to other influencers, who are socially more prominent but, in the context of our work, less interesting.
-
-Community detection algorithms partition network graphs in sets of nodes which are more related one another taking into account different criteria.
-
-Demon \anote{cit needed} is the community detection algorithm of choice because it is based on the ego network concept and finds overlapping communities. 
-Overlapping communities means that a user could belong to more than one community, hence likely to be more engaged on the context of choice.
-Ego network is a network that considers a node and its neighbours only. It provides a local method of discovering user affiliations, thus more akin to a social context.
-
-Demon works iteratively for each node v in the network graph:
-\begin{enumerate}
-	\item get the ego network of v minus the node v.
-	\item apply "label propagation" \anote{cit needed} to each neighbour n of v:
-	\begin{enumerate}
-		\item to each n is assigned a unique label l (which identifies a community).
-		\item each n gets the possibility to change its label with probability $\alpha$ based on the label majority of its neighbours.
-		\item v gets assigned to the greatest community found by the labels (more than one community if same number of labels)
-	\end{enumerate}
-	\item Merge similar communities if and only if at most the $\epsilon \%$ of the smaller community is not included in the bigger one.
-\end{enumerate}
-Users which do not belong to any community are discarded from the whole process.
-
-In-degree centrality is then calculated for each node locally to each found community.
-
-Large networks are further partitioned into communities, using the well-known Demon community-detection algorithm \cite{DEMON}.
+The goal of this partitioning is to further narrow the scope for the topology-sensitive metrics, namely FollowerRank (\ref{eq:FR}) and in-degree centrality (\ref{eq:IDC}), 
+and thus to enable weak-signal users to emerge relative to other more globally dominant users.
 %
+Many different approaches have been proposed to discover virtual communities in social networks. 
+We have chosen {DEMON}~\cite{Coscia:2012:DLD:2339530.2339630} because it allows communities to overlap to a degree that is tunable, making it an ideal feature to identify users who may be active in more than one community within the same context, i.e., a social event or a campaign.
 
+{DEMON} identifies communities that a person belongs to with \textit{ego networks}, which consists of an individual, called the ego, and all the persons the ego has a social relationship with. 
+As each ego network considers a node and its neighbours only, it provides a local method for discovering user affiliations, thus more akin to a social context.
+%
+It has been suggested~\cite{Arnaboldi2013} that ego networks are a useful model not only to describe social relationships amongst people offline, but also the structure of their online connections. 
+Recognising that any individual may have different types of social relationships with different people (i.e., family, friends, colleagues, etc.),  {DEMON}  naturally allows for an individual to participate in multiple communities. 
 
-\anote{TO EDIT: BELOW}
+The locality principle of ego networks translates into an efficient algorithm for discovering overlapping communities in a social graph. 
+Specifically, {DEMON} operates on one node $v$ at a time in our context network $G_C$.
 
+It applies a \textit{label propagation} algorithm to each neighbour $v'$ of $v$, as follows. First, a new label $l$, which identifies a new community, is tentatively assigned to $v'$. 
+	Then, with probability $\alpha$ $v'$ changes its label to that of the majority of its own neighbours. 
+	At this point, each of $v$'s neighbours has a label, which is either new of that of the majority of its own neighbours (excecpt $v$ itself).
+	$v$ is then assigned majority labels amongst those of its neighbours. 
+	This determines $v$'s community. 
+	When more than one label has the same count, $v$ is assigned to all of those communities.
+%
+As a final step, communities that overlap by more than some percentage $\epsilon $ are merged.
 
+Note that users who do not belong to any community are discarded from the whole process.
+Once communities are identified, we calculate  in-degree centrality (\ref{eq:IDC}) for each node locally, \textit{relative to their own community}.
 
-Relevance features are then computed for each user within the scope of each community. 
-Finally, a relevance score is associated with each user in the context, and used to update their global score in the database of relevant users.
+\comment{In our evaluation we have experimented with varying values for parameters $\alpha$ an $\epsilon$...}{do we plan to say anything on how to tune them?}
+
+\anote{what happens when nodes belong to more than one community?}
+
+\subsection{Computing user features and ranking}  \label{sec:features}
+
+The next step in the process involves retrieving the core features and then the user relevance metrics as defined in Sec. ~\ref{sec:metrics}, for each user in each of the communities.
+
+As this involves querying the Twitter API for many user profiles, this step hits the limitations imposed by Twitter \anote{be specific}.
+To get around this problem, we have implemented a dedicated component to \textit{scrape} user information directly from their profile Web pages, namely:
+\begin{itemize}
+	\item personal information: the name of the user, the link to its website, the bio and the date the user joined Twitter.
+	\item profile statistics: the number of tweets published, and the number of followers $F1(u)$ as well as of followees, $F2(u)$.
+\end{itemize}
+The latter are used directly to compute  the \textit{Follower Rank} metric (\ref{eq:FR}).
+To compute the other metrics: \textit{Topical Focus} (\ref{eq:TF}), \textit{Topical Strength} (\ref{eq:TS}), \textit{Topical Attachment} \ref{eq:TA}, we further need to retrieve the entire user post history for the entire time interval defined by the context.
+These posts are then separated into $P(C)$ (on-context) and $\Tilde{P}(C)$ (off-context), depending on whether they contain a hashtag related to the context or not.
+Similarly, a post that contains a link is a \textit{link on-topic} that contains both a link and an hashtag related to the context, and a \textit{link off-topic} otherwise.
+Note that we also calculate the number of retweets for every post, i.e., $\mathit{R1}(u)$ and $\mathit{R3}(u)$, which are required to compute \textit{Topical Strength}.
+
+All of these features are persisted to a database which is made available for ranking purposes.
+When a user already appears in the database, i.e., from previous iterations, a user-defined function can be specified to update the set of features. 
+For instance, one such function could just store the average over multiple occurrences of the same user across iterations, of each of the features as well as of the metrics.
+Alternatively, the database allows for the series of features values to be stored, making it possible to analyse them over time.
+
+The main purpose of the database is to enable data analytics on a growing set of users, whose history of engagement may extend over multiple events or campaigns.
+In particular, ranking is achieved by specifying a user-defined function, as described in Fig.~\ref{fig:twitterframework}, which is a function of the metrics and generates a relevance score for each user.
+Note that this ``framework'' approach is consistent with the experimental nature of our search for \textit{activists}, which requires exploring a variety of ranking functions.
+
+\subsection{Context discovery} \label{sec:context-discovery}
 
 The final step in the iteration aims to discover new contexts. 
-This is achieved by looking for relevant new keywords and hashtags and that are found in the post history (retrieved earlier) for the top-$k$ new users identified during the iteration. 
-This last step is currently not automated, and involves humans who are knowledgeable with the domain. 
-As such knowledge is not particularly deep or difficult to source, in the future we plan to crowdsource this particular step.
+The idea is that, once a score function has been applied and users have been ranked, we can hope to discover new interesting keywords and hashtags in the timeline of the top-$k$ users.
+Specifically,  we consider each hashtag found in the timelines, which is related to the broader topic and not yet considered in past iterations.
+Each stored hashtag is then enriched with the information needed to perform a new iteration of the pipeline, namely (i) the temporal and spatial information of the context, and (ii) related hashtags.
 
-The new context constructed using the new keywords and hashtags are used to initiate the next iteration. 
+Currently this step is only semi-automated, as it requires a human to make a judgement on the relevance of the new terms. 
+One can easily imagine this step to completely automated, however, and this is one of the items for our current work.
+
 While the process ends naturally when no new contexts are uncovered from the previous ones, the system continuously monitors the Twitter stream for recent contexts. These may typically include events that are temporally recurring, and use similar hashtags for each new edition. In this case, their relevance is assessed on the basis of their past history.
 
-
-
-\anote{
-	\begin{itemize}
-		\item Conversations that take place within the context of an event are represented as dynamic weighted social network graphs (context network)
-		
-		\item Depending on the size and importance of the event, these networks may be first partitioned into smaller virtual overlapping communities, using the Demon community detection algorithm. \textbf{Rationale} for this: users who are low profile within the larger graph may emerge within a more local community. This is the same rationale as for the general ideas of contexts)
-		\item users within each community (for small communities, we use the entire network) are then ranked according to some combination of all their features
-		\item Progressively build up stronger profiles of repeat users, by updating their strength using the new values for the metrics
-	\end{itemize}
-}
-
-\comment{Since our method relies on small networks that represent limited topical context, our challenge is to find metrics that operate well on small networks.}{rephrase}
-
-
-
-
-\subsection{User selection and ranking}  \label{sec:ranking}
-All users are enriched with data coming from their own Twitter timeline and profile section.
-
-This step is required in order to get information relative to the user itself and the user related to the context.
-
-From the user profile section the following information are harvested:
-\begin{itemize}
-    \item personal information: the name of the user, the link to its website, the bio and the date the user joined Twitter.
-    \item profile statistics: the number of tweets published, the number of followers as well as the number of followees.
-\end{itemize}
-
-The number of follower and followees are then used to compute the Follower Rank \anote{cit needed}.
-
-In order to compute the context related features (topical attachment, context focus and topical strength \anote{link needed}), the user timeline at the time of the context must be analyzed.
-All the tweets from the user are then harvested in the timeframe the context occurs and they get categorised in several ways:
-\begin{itemize}
-    \item in-topic and off-topic: depending whether they contain an hashtag related to the context or not.
-    \item link on-topic and off-topic: depending whether they contain both a link and an hashtag related to the context or not.
-\end{itemize}
-From the harvested tweets, also the number of times a tweet gets retweeted is extracted (required for computing the topical strength).
-
-The collection and the computation of the aforementioned features, also from the previous steps, provides a solid foundation of structured information to work on.
-A ranking function can then be defined and thus apply an order to the users. It can either use the raw features as is, as well as relating the features one another, like for example considering the number of times a user appeared in different contexts.
-
-\subsection{New context discovery}  \label{sec:context-discovery}
-Because of how the framework is set up, it benefits from gaining new contexts to update and increase the number of users stored.
-
-New contexts are acquired in a manual fashion in the following manner.
-
-Given the top k ranked users, a manual analysis of the users timeline is performed.
-Each hashtag found in the timelines that is related to the broader topic and not yet considered in past iterations is stored.
-Each stored hashtag is then enriched with the information needed to perform a new iteration of the pipeline:
-\begin{itemize}
-    \item temporal and spatial information of the context
-    \item related hashtags
-\end{itemize}
-
-At this point a new iteration of the pipeline can start.
-
-%\noindent Context $C$ $\rightarrow$ all users $U(C)$ \\
-%$U(C)$ $\rightarrow$ retrieve context metrics $\rightarrow$ build context network $N(U(C))$ \\
-%$N(U(C))$ $\rightarrow$ detect communities \\
-%for each community: compute $\{ \mathit{in-degree}(u)\}_{u\in U}$ (relative to the community)\\
-%
-%in parallel also compute:\\
-%- context-independent metrics\\
-%- content-based metrics\\
-%
-%}
 
 \section{Empirical Evaluation: activists} \label{sec:evaluation}
 
