--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,3 +1,34 @@
+@inproceedings{Arnaboldi2013,
+	author = {Arnaboldi, V and Conti, M and Passarella, A and Pezzoni, F},
+	booktitle = {2013 Proceedings IEEE INFOCOM},
+	doi = {10.1109/INFCOM.2013.6567181},
+	isbn = {0743-166X VO  -},
+	keywords = {Accuracy,Communication networks,Conferences,Facebook,Indexes,Internet,Internet service,Twitter,cognitive constraint,content generation,data exchange system,ego network,experimental analysis,human brain,human social network,human social relationship,human-centred system,humancentric network,offline environment,offline social network,online social network,social characteristics,social networking (online),social relationship maintenance,social sciences computing,structural property},
+	pages = {3459--3464},
+	title = {{Ego networks in Twitter: An experimental analysis}},
+	year = {2013}
+}
+
+
+@inproceedings{Coscia:2012:DLD:2339530.2339630,
+	author = {Coscia, Michele and Rossetti, Giulio and Giannotti, Fosca and Pedreschi, Dino},
+	title = {DEMON: A Local-first Discovery Method for Overlapping Communities},
+	booktitle = {Proceedings of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+	series = {KDD '12},
+	year = {2012},
+	isbn = {978-1-4503-1462-6},
+	location = {Beijing, China},
+	pages = {615--623},
+	numpages = {9},
+	url = {http://doi.acm.org/10.1145/2339530.2339630},
+	doi = {10.1145/2339530.2339630},
+	acmid = {2339630},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {community discovery, complex networks, data mining},
+} 
+
+
 @article{Bizid2018,
 	abstract = {During crisis events such as disasters, the need for real-time information retrieval (IR) from microblogs becomes essential. However, the huge amount and the variety of the shared information in real time during such events over-complicates this task. Unlike existing IR approaches based on content analysis, we propose to tackle this problem by using user-centric IR approaches with identifying and tracking prominent microblog users who are susceptible to share relevant and exclusive information at an early stage of each analyzed event phase. This approach ensures real-time access to the valuable microblogs information required by the emergency teams. In this approach, we propose a phase-aware probabilistic model for predicting and ranking prominent microblog users over time according to their behavior using Mixture of Gaussians Hidden Markov Models (MoG-HMM). The model utilizes a new user representation which takes into account both the user and the event specificities over time. This user representation comprises the following new aspects (1) Modeling microblog users behavior evolution by considering the different event phases (2) Characterizing users activity over time through a temporal sequence representation (3) Time-series-based selection of the most discriminative features (4) prominent users prediction using probabilistic phase-aware models learned a priori. We have conducted experiments during flooding events: we trained our identification models using a dataset relative to the “Alpes-Maritimes floods” and we tested its identification performance using a new dataset relative to another flooding disaster “Herault floods”. The achieved results show that our model significantly outperforms phase-unaware models and identifies most of the prominent users at an early stage of each event phase.},
 	author = {Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Doucet, Antoine},
