started eval section - 2

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -438,7 +438,9 @@ The chart in Fig.~\ref{fig:repeat-users-frequency} shows the number of repeat us
 	\label{fig:repeat-users-frequency}
 \end{figure*}
 
+  \subsection{Users ranking} \label{sec:ranking}
   
+  \anote{show the effect of one or two ranking functions and single out users that ``look like activists'' top empirically prove the point}
 	
 \section{Discussion and ongoing work}
 
